[package]
name = "parcomb"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/py0x/parcomb"
homepage = "https://github.com/py0x/parcomb"
description = """
A tiny parser combinator library.
"""
keywords = ["parser", "parser-combinator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
